cmake_minimum_required(VERSION 3.9)
project(intel_cmt_cat_master)

set(CMAKE_CXX_STANDARD 11)
include_directories(/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include;
        /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/System/Library/Frameworks/Kernel.framework/Versions/A/Headers;
        /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/System/Library/Frameworks/Kernel.framework/Versions/A/Headers/sys)

add_executable(intel_cmt_cat_master
        examples/c/CAT/allocation_app.c
        examples/c/CAT/association_app.c
        examples/c/CAT/reset_app.c
        examples/c/CMT_MBM/monitor_app.c
        examples/c/PSEUDO_LOCK/dlock.c
        examples/c/PSEUDO_LOCK/dlock.h
        examples/c/PSEUDO_LOCK/pseudo_lock.c
        examples/c/PSEUDO_LOCK/tsc.c
        examples/c/PSEUDO_LOCK/tsc.h
        lib/perl/pqos.i
        lib/allocation.c
        lib/allocation.h
        lib/api.c
        lib/api.h
        lib/api_doxygen.cfg
        lib/cap.c
        lib/cap.h
        lib/cpuinfo.c
        lib/cpuinfo.h
        lib/lib_doxygen.cfg
        lib/log.c
        lib/log.h
        lib/machine.c
        lib/machine.h
        lib/Makefile
        lib/monitoring.c
        lib/monitoring.h
        lib/os_allocation.c
        lib/os_allocation.h
        lib/os_monitoring.c
        lib/os_monitoring.h
        lib/perf.c
        lib/perf.h
        lib/pqos.h
        lib/README
        lib/resctrl_alloc.c
        lib/resctrl_alloc.h
        lib/types.h
        lib/utils.c
        lib/utils.h
        pqos/configs/alloc_config_cdp.cfg
        pqos/configs/alloc_reset_cat.cfg
        pqos/configs/alloc_select_clos.cfg
        pqos/configs/alloc_set_clos_11LLC_ways.cfg
        pqos/configs/alloc_set_clos_11LLC_ways_cdp.cfg
        pqos/configs/alloc_set_clos_12LLC_ways.cfg
        pqos/configs/alloc_set_clos_12LLC_ways_cdp.cfg
        pqos/configs/alloc_set_clos_20LLC_ways.cfg
        pqos/configs/alloc_set_clos_20LLC_ways_cdp.cfg
        pqos/configs/alloc_set_core_assoc.cfg
        pqos/configs/alloc_show_verbose.cfg
        pqos/configs/mon_llc_core_text.cfg
        pqos/configs/mon_llc_core_xml_file.cfg
        pqos/configs/mon_llc_pid_text.cfg
        pqos/configs/mon_llc_pid_xml_file.cfg
        pqos/configs/mon_mbl_core_text.cfg
        pqos/configs/mon_mbr_core_interval.cfg
        pqos/configs/README
        pqos/alloc.c
        pqos/alloc.h
        pqos/cap.c
        pqos/cap.h
        pqos/main.c
        pqos/main.h
        pqos/Makefile
        pqos/monitor.c
        pqos/monitor.h
        pqos/pqos-msr
        pqos/pqos-os
        pqos/pqos.8
        pqos/profiles.c
        pqos/profiles.h
        pqos/README
        rdtset/common.c
        rdtset/common.h
        rdtset/cpu.c
        rdtset/cpu.h
        rdtset/Makefile
        rdtset/rdt.c
        rdtset/rdt.h
        rdtset/rdtset.8
        rdtset/rdtset.c
        rdtset/README)
